--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=localhost\\MSSQLSERVER02;Database=NZWalksDb;Trusted_Connection=True;"
+  }
 }
